examples/test/testpolicy361.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy361
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key40: value3
      key13: value34
      key27: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value18
          key20: value19
          key8: value10
      podSelector:
        matchLabels:
          key6: value49
          key4: value8
          key48: value47
